js/js.translator/testData/incremental/invalidation/variance/lib1/l1.2.kt
// TODO: After KT-51099, m.kt from main module must be dirty
interface Producer<T> {
    fun produce(): T
}

interface Consumer<T> {
    fun consume(v: T): Int
}
